# savethebeat

./: .env.example  .env.production.example  .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  PLAN.md  README.md  TESTING.md  docker-compose.yml  fly.toml
.github/workflows/: ci.yml
.sqlx/: query-030a5db827f1a01a8fb173966ccb4b6e5912ca6842354bb2b2baf136f3a21da4.json  query-20ef0baf7888e3f65eff62f99c9ac95d514a99633a918eab6df8693156c28296.json  query-87eb38ca2814185b316a4e4073d0b0896f4a5e67fee36e472ef9e545f8aef9a4.json  query-d870850a35c0f08040f9c74e5864b4f9a2099af57142ebb8fa9c345890500286.json  query-ee6364ec84250329efdc370ff5f208b65b5d5b934914ccb2ce2e3522b5264bdd.json
migrations/: 20260206000001_initial_schema.sql
src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/db/: mod.rs  models.rs  repository.rs
src/routes/: mod.rs
src/slack/: client.rs  events.rs  mod.rs  routes.rs  verification.rs
src/spotify/: client.rs  mod.rs  oauth.rs  parser.rs  routes.rs
templates/: spotify_success.html
tests/: integration_test.rs
