[package]
name = "savethebeat"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1.49", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"
envy = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# OAuth & HTTP client
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }

# Crypto for state tokens and Slack signatures
rand = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
